--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
-<h2>Login</h2>
+<h2>Sign Up</h2>
 
-<form class="form login-form">
+<form class="form signup-form">
   <div class="form-group">
     <label for="email-login">username:</label>
     <input class="form-input" type="text" id="username-login" />
@@ -10,9 +10,9 @@
     <input class="form-input" type="password" id="password-login" />
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" type="submit">Login!</button>
+    <button class="btn btn-primary" type="submit">Sign Up!</button>
   </div>
-  <button id="signup-instead">Sign Up instead</button>
+  <button id="login-instead">Log In instead</button>
 </form>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
