--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,18 @@
-<h1>
-  HomePage Goes Here
-</h1>
+<div class="chat-container" id="chat-container">
+      <div class="chat-box" id="chat-box">
+        <div class="chat-message bot-message">
+          <span class="message">Event Bot ✌🏼</span>
+        </div>
+      </div>
+      <div class="input-container">
+        <input
+          type="text"
+          id="user-input"
+          class="user-input"
+          placeholder="Type a message..."
+        />
+        <button id="send-btn" class="send-btn">Send</button>
+      </div>
+    </div>
+
+<script src="/js/chatbox.js"></script>
