--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,93 @@
-<div class="chat-container" id="chat-container">
-      <div class="chat-box" id="chat-box">
-        <div class="chat-message bot-message">
-          <span class="message">Event Bot ✌🏼</span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EventBuddy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-info">
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
+     <a class="navbar-brand text-warning " href="#" style="font-size: 50px;">
+        <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
+        Event Buddy
+     </a>
+    </nav>
+
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <h5 class="card-title">Find Activities</h5>
+                        <input type="text" class="form-control" id="search-activities" placeholder="Find activities near you">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <h5 class="card-title">Post an Activity</h5>
+                        <button class="btn btn-primary" id="post-activity">Post an Activity</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+      <div class="card bg-warning">
+        <div class="card-body">
+            <h5 class="card-title">Get Suggestions</h5>
+
+            <div class="card bg-lightblue text-white">
+               <div class="card-body" id="chat-box">
+                  <div class="chat-message bot-message text-dark"> 
+                    <span class="message">Event Bot ✌🏼</span>
+                  </div>
+               </div>
+            </div>
+                    <div class="input-group mt-3">
+                        <input type="text" id="user-input" class="form-control" placeholder="Type a message...">
+                        <div class="input-group-append">
+                            <button id="send-btn" class="btn btn-primary">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
-      </div>
-      <div class="input-container">
-        <input
-          type="text"
-          id="user-input"
-          class="user-input"
-          placeholder="Type a message..."
-        />
-        <button id="send-btn" class="send-btn">Send</button>
-      </div>
+     </div>
+   </div>
+
+        <main>
+            {{{body}}}
+        </main>
     </div>
 
-<script src="/js/chatbox.js"></script>
+    <footer class="bg-danger text-white text-center py-2 fixed-bottom">
+        <p>&copy; 2024 EventBuddy. All rights reserved.</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/js/chatbox.js"></script> 
+    <script>
+        document.getElementById('post-activity').addEventListener('click', function() {
+            
+            alert('Post an activity feature coming soon!');
+        });
+
+        document.getElementById('search-activities').addEventListener('input', function() {
+            
+            console.log('Searching for activities:', this.value);
+        });
+
+        document.getElementById('suggest-activities').addEventListener('input', function() {
+            
+            console.log('Getting suggestions:', this.value);
+        });
+    </script>
+</body>
+</html>
