--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,12 +10,15 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-info">
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
-     <a class="navbar-brand text-warning " href="#" style="font-size: 50px;">
-        <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
-        Event Buddy
-     </a>
-    </nav>
+    {{!-- <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
+  <a class="navbar-brand text-warning " href="#" style="font-size: 50px;">
+    <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
+    Event Buddy
+  </a>
+  <div class="ml-auto">
+    <button class="btn btn-warning text-dark" style="margin-top: 10px;">Logout</button>
+  </div>
+</nav> --}}
 
     <div class="container mt-4">
         <div class="row">
@@ -119,6 +122,9 @@
         document.getElementById('suggest-activities').addEventListener('input', function() {
             console.log('Getting suggestions:', this.value);
         });
+
+    
     </script>
 </body>
 </html>
+
