--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,23 +7,23 @@
   <title>Event Buddy</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/chatbox.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
-    <nav>
-      <button class="btn" id="home">Home</button>
-      {{#if logged_in}}
-          <button class="btn" id="logout">logout</button>
-      {{else}}
-          <button class="btn" id="login">login</button>
-      {{/if}}
-    </nav>
-    <h1>
-      EventBuddy
-    </h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
+  <a class="navbar-brand text-warning" href="#" style="font-size: 50px;">
+    <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
+    Event Buddy
+  </a>
+  <div class="ml-auto">
+    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 10px;" id="logout">Logout</button>
+    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 130px;" id="login">Login</button>
+    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 250px;" id="home">Home</button>
+  </div>
+</nav>
   </header>
-  <main class="container container-fluid mt-5">
+  <main class="container-fluid mt-5 pt-5">
     {{{ body }}}
   </main>
   <footer>
