--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up | EventBuddy</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body class="bg-info">
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
-        <a class="navbar-brand text-warning " href="#" style="font-size: 50px;">
-            <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
-            Event Buddy
-        </a>
-    </nav>
-
     <div class="container mt-4">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -43,19 +27,5 @@
             </div>
         </div>
     </div>
-
-    <footer class="bg-danger text-white text-center py-2 fixed-bottom">
-        <p>&copy; 2024 EventBuddy. All rights reserved.</p>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-     <script>
-        function redirectToLoginPage() {
-            window.location.href = "login";
-        }
-    </script>
-</body>
-</html>
+    <script src="/js/signup.js"></script>
 
