--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,4 @@
 
-    {{!-- <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
-  <a class="navbar-brand text-warning " href="#" style="font-size: 50px;">
-    <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
-    Event Buddy
-  </a>
-  <div class="ml-auto">
-    <button class="btn btn-warning text-dark" style="margin-top: 10px;">Logout</button>
-  </div>
-</nav> --}}
-
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-4 mb-3">
@@ -81,13 +71,14 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save Activity</button>
+                    <button type="button" class="btn btn-primary" id="save-activity">Save Activity</button>
                 </div>
             </div>
         </div>
     </div>
 
     <script src="/js/chatbox.js"></script> 
+    <script src="/js/posts.js"></script>
     <script>
         document.getElementById('post-activity').addEventListener('click', function() {
             $('#postActivityModal').modal('show');
