--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-info">
   <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
   <a class="navbar-brand text-warning" href="#" style="font-size: 50px;">
     <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
