--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,31 +13,31 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-info">
+<body class="bg-info" style="font-family: 'Poetsen One', sans-serif;">
   <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
-  <a class="navbar-brand text-warning" href="#" style="font-size: 50px;">
-    <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
-    Event Buddy
-  </a>
-  <div class="ml-auto">
-    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 10px;" id="logout">Logout</button>
-    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 130px;" id="login">Login</button>
-    <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 250px;" id="home">Home</button>
-  </div>
-</nav>
-  </header>
+    <a class="navbar-brand text-warning" href="#" style="font-size: 50px; font-family: 'Poetsen One', sans-serif;">
+      <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
+      Event Buddy
+    </a>
+    <div class="ml-auto">
+      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 10px;" id="logout">Logout</button>
+      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 130px;" id="login">Login</button>
+      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 250px;" id="home">Home</button>
+    </div>
+  </nav>
   <main class="container-fluid mt-5 pt-5">
     {{{ body }}}
   </main>
-  <footer class="bg-danger text-white text-center py-2 fixed-bottom">
-        <p>&copy; 2024 EventBuddy. All rights reserved.</p>
+  <footer class="bg-danger text-white text-center py-2 fixed-bottom" style="font-family: 'Poetsen One', sans-serif;">
+    <p>&copy; 2024 EventBuddy. All rights reserved.</p>
   </footer>
 
   {{#if logged_in}}
     <script src="/js/logout.js"></script>
   {{/if}}
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
+</html>
