--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -87,7 +87,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="save-activity">Save Activity</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal id="save-activity">Save Activity</button>
                 </div>
             </div>
         </div>
