edited nav bar for mobile format

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,10 +19,15 @@
       <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
       Event Buddy
     </a>
-    <div class="ml-auto">
-      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 10px;" id="logout">Logout</button>
-      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 130px;" id="login">Login</button>
-      <button class="btn btn-warning text-dark position-fixed" style="top: 10px; right: 250px;" id="home">Home</button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="ml-auto">
+        <button class="btn btn-warning text-dark m-2" id="home">Home</button>
+        <button class="btn btn-warning text-dark m-2" id="login">Login</button>
+        <button class="btn btn-warning text-dark m-2" id="logout">Logout</button>
+      </div>
     </div>
   </nav>
   <main class="container-fluid mt-5 pt-5">
