--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -44,9 +44,9 @@
         <div class="col-md-8 col-lg-6">
             <div class="card bg-danger shadow-lg rounded-lg" data-eventId={{event.id}}>
                 <div class="card-header bg-warning text-black">
-                    <h4 class="small">{{event.name}}</h4>
-                    <h5>{{event.date}} at {{event.time}}</h5>
-                    <h5>location: {{event.location}}</h5>
+                    <h4>{{event.name}}</h4>
+                    <h6>{{event.date}} at {{event.time}}</h5>
+                    <h6>location: {{event.location}}</h5>
                     <h6>Posted by {{user.name}}</h6>
                 </div>
                 <p class="card-body">{{event.description}}</p>
