Revert "fixed-top removed"

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-info" style="font-family: 'Poetsen One', sans-serif;">
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+  <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
     <a class="navbar-brand text-warning" href="#" style="font-size: 50px; font-family: 'Poetsen One', sans-serif;">
       <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
       Event Buddy
@@ -30,7 +30,7 @@
       </div>
     </div>
   </nav>
-  <main class="container-fluid">
+  <main class="container-fluid mt-5 pt-5">
     {{{ body }}}
   </main>
   <footer class="bg-danger text-white text-center py-2 fixed-bottom" style="font-family: 'Poetsen One', sans-serif;">
