--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/chatbox.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body class="bg-info" style="font-family: 'Poetsen One', sans-serif;">
   <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
-    <a class="navbar-brand text-warning" href="#" style="font-size: 50px; font-family: 'Poetsen One', sans-serif;">
+    <a class="navbar-brand text-warning" href="#">
       <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
       Event Buddy
     </a>
