--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
 </head>
 
 <body class="bg-info" style="font-family: 'Poetsen One', sans-serif;">
-  <nav class="navbar navbar-expand-lg navbar-light bg-danger fixed-top">
+  //Removed fixed-top to fix vertical scroll issues 
+  <nav class="navbar navbar-expand-lg navbar-light bg-danger">
     <a class="navbar-brand text-warning" href="#" style="font-size: 50px; font-family: 'Poetsen One', sans-serif;">
       <img src="img/eventbuddy.jpg" class="img-fluid" style="width: 80px;">
       Event Buddy
@@ -30,7 +31,8 @@
       </div>
     </div>
   </nav>
-  <main class="container-fluid mt-5 pt-5">
+//Removed mt-5 pt-5 to remove horizontal scroll on the page
+  <main class="container-fluid">
     {{{ body }}}
   </main>
   <footer class="bg-danger text-white text-center py-2 fixed-bottom" style="font-family: 'Poetsen One', sans-serif;">
